# hybrid-vrp-solver

./: .gitignore  Cargo.toml  README.md
benchmarks_vrp/: CMT1_0.vrp  CMT1_0_0.coo  CMT1_0_0.vrp  CMT1_1.vrp  CMT1_1_0.coo  CMT1_1_0.vrp  CMT1_2.vrp  CMT1_2_0.coo  CMT1_2_0.vrp  CMT1_3.vrp  CMT1_3_0.coo  CMT1_3_0.vrp  CMT1_4.vrp  CMT1_4_0.coo  CMT1_4_0.vrp  CMT1_5.vrp  CMT1_5_0.coo  CMT1_5_0.vrp  CMT1_6.vrp  CMT1_6_0.coo  CMT1_6_0.vrp  CMT1_7.vrp  CMT1_7_0.coo  CMT1_7_0.vrp  CMT1_8.vrp  CMT1_8_0.coo  CMT1_8_0.vrp  CMT1_9.vrp  CMT1_9_0.coo  CMT1_9_0.vrp  advantage2.txt  att48_0.tour  att48_0.vrp  att48_1.tour  att48_1.vrp  att48_10.tour  att48_10.vrp  att48_2.tour  att48_2.vrp  att48_3.tour  (+14 more)
benchmarks_vrp/CMT1/: direct.txt  direct7.txt  fixed_c.txt  fixed_c_size.txt  leaphybrid.txt  leaphybrid_long.txt  no_cluster.txt  qbsolv.txt  qbsolv_new.txt  qbsolv_oneiter.txt  qbsolv_oneiter_new.txt  simulated.txt  tsp_classic.txt
benchmarks_vrp/CMT11/: direct.txt  fixed_c.txt  fixed_c_size.txt  leaphybrid.txt  leaphybrid_long.txt  no_cluster.txt  qbsolv.txt  qbsolv_new.txt  qbsolv_oneiter.txt  qbsolv_oneiter_new.txt  simulated.txt  tsp_classic.txt
benchmarks_vrp/CMT12/: direct.txt  fixed_c.txt  fixed_c_size.txt  leaphybrid.txt  leaphybrid_long.txt  no_cluster.txt  qbsolv.txt  qbsolv_new.txt  qbsolv_oneiter.txt  qbsolv_oneiter_new.txt  simulated.txt  tsp_classic.txt
benchmarks_vrp/CMT2/: direct.txt  fixed_c.txt  fixed_c_size.txt  leaphybrid.txt  leaphybrid_long.txt  no_cluster.txt  qbsolv.txt  qbsolv_new.txt  qbsolv_oneiter.txt  qbsolv_oneiter_new.txt  simulated.txt  tsp_classic.txt
benchmarks_vrp/CMT3/: direct.txt  fixed_c.txt  fixed_c_size.txt  leaphybrid.txt  leaphybrid_long.txt  no_cluster.txt  qbsolv.txt  qbsolv_new.txt  qbsolv_oneiter.txt  qbsolv_oneiter_new.txt  simulated.txt  tsp_classic.txt
benchmarks_vrp/CMT4/: direct.txt  fixed_c.txt  fixed_c_size.txt  leaphybrid.txt  leaphybrid_long.txt  no_cluster.txt  qbsolv.txt  qbsolv_new.txt  qbsolv_oneiter.txt  qbsolv_oneiter_new.txt  simulated.txt  tsp_classic.txt
benchmarks_vrp/CMT5/: direct.txt  fixed_c.txt  fixed_c_size.txt  leaphybrid.txt  leaphybrid_long.txt  (+7 more)
modified-deps/: README.md
python/lkh-interface/: pyproject.toml
python/lkh-interface/src/: main.py
python/qrisp_solver/: all_in_one.py  cyclic.py  main.py  pyproject.toml  qaoa.py  test.py
python/qrisp_solver/qrisp_solver/: distance.py  oracle.py  permutation.py
python/qubo_solver/: README.md  att48_1.coo  pyproject.toml
python/qubo_solver/src/: embeddings.py  main.py  solver.py
python/qubo_solver/wheels/: rectangle_packer-2.0.1-pp39-pypy39_pp73-manylinux_2_17_aarch64.manylinux2014_aarch64.whl
src/: args.rs  error_code.rs  main.rs
(+1848 files in other folders)
