[package]
name = "pipeline"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.3.2", features = ["derive"] }
indicatif = "0.17.5"
kmeans = "0.2.0"
tspf = { path = "../tspf-rs" }
vrp-cli = "1.21.1"
vrp-scientific = "1.21.1"
